# timesync

./: .gitignore  Cargo.toml  LICENSE  build.rs  ical_helper.py
src/: app.rs  calendar.rs  consts.rs  lib.rs  main.rs  ui.rs
src/ui/: calendar.60
test/ical/: daily.ical  daily.ics  monthly.ical  monthly.ics  weekly.ical  weekly.ics
