[package]
name = "timesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
chrono = "0.4"
num-traits = "0.2.14"
clap = "3.0.14"
icalendar = {version = "0.11.0", features = ["parser"]}
rrule = "0.7.1"

[build-dependencies]
slint-build = "0.2.0"
