[package]
name = "timesync"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Diza <josephm.diza@gmail.com>"]
repository = "https://github.com/jmdaemon/timesync"
homepage = "https://github.com/jmdaemon/timesync"
description = "Lightweight, fast, and highly customizable calendar application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.2.0", optional = true }
chrono = "0.4"
num-traits = "0.2.14"
clap = { version = "4.3.24", features = ["derive"] }
icalendar = {version = "0.11.0", features = ["parser"]}
rrule = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"

[build-dependencies]
slint-build = { version = "0.2.0", optional = true }

[features]
ui = ["slint", "slint-build"]
